[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://Objects/CrashOverlay.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/FinishOverlay.tscn" type="PackedScene" id=6]

[node name="MainScene" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true

[node name="_TempObjects" type="Node2D" parent="."]
z_index = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="CrashOverlay" parent="UI" instance=ExtResource( 5 )]
visible = false
margin_left = 135.0
margin_top = 141.0
margin_right = 135.0
margin_bottom = 141.0

[node name="FinishOverlay" parent="UI" instance=ExtResource( 6 )]
visible = false
margin_left = 177.0
margin_top = 157.0
margin_right = 177.0
margin_bottom = 157.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1031.0
margin_bottom = 608.0
color = Color( 0.282353, 0.282353, 0.282353, 1 )
